* Thu Jul 12 2018 Trevor Vaughan <tvaughan@onyxpoint.com> - 7.6.1-0
- Fixed the new `simp_generate_types` script to ensure that the permissions on
  the created directory are correctly set.

* Thu Jun 14 2018 Nick Miller <nick.miller@onyxpoint.com> - 7.6.1-0
- Cleanup unneeded fixtures and update CI assets
- Remove unused simp/tcpwrappers and simp/logrotate dependencies

* Fri May 04 2018 Trevor Vaughan <tvaughan@onyxpoint.com> - 7.6.0-0
- Changed some 'validate_re' statements to 'assert_type' to remove deprecation
  warnings
- Added 'pupmod::master::generate_types' (enabled by default) which:
  - Adds a script, /usr/local/sbin/simp_generate_types that will run 'puppet
    generate types' either on all environments (when first distributed by
    Puppet) or per environment
  - Adds incron hooks to run 'simp_generate_types' when Ruby files in any
    puppet type have been updated
  - Adds incron hooks to run 'simp_generate_types' on any new environment
  - Adds incron hooks to run 'simp_generate_types' on *all* environments if the
    puppetserver binary is updated
  - All errors are logged to syslog

* Tue Apr 17 2018 Jeanne Greulich <jeanne.greulich@onyxpoint.com> - 7.6.0-0
- Added line in puppet cron to shutdown/disable puppet client service.
- Added check in agent/cron manifest to disable and stop puppet client service
  so it would not run multiple times on newly kickstarted systems.

* Mon Mar 19 2018 Lucas Yamanishi <lucas.yamanishi@onyxpoint.com> - 7.5.0-0
- Fix service name and related resources on Puppet Enterprise (PE)
  - Fix `$tmpdir` setting on PE
  - Fix Puppetserver service management on PE

* Tue Mar 06 2018 Nick Miller <nick.miller@onyxpoint.com> - 7.5.0-0
- pupmod::master::simp_auth
  - Allow tweaking `allow` and `deny` rules for supported keydist auth rules
  - Removed Mcollective auth rules
  - Deprecated `$legacy_cacerts_all` and `$legacy_pki_keytabs_from_host`

* Fri Mar 02 2018 Trevor Vaughan <tvaughan@onyxpoint.com> - 7.5.0-0