@@ -23,7 +23,7 @@
     },
     {
       "name": "puppetlabs/stdlib",
-      "version_requirement": ">= 4.13.0 < 5.0.0"
+      "version_requirement": ">= 4.19.0 < 5.0.0"
     },
     {
       "name": "puppetlabs/inifile",
